--- a/requirements.txt
+++ b/requirements.txt
@@ -1,338 +1,5 @@
-aiobotocore
-aiohappyeyeballs
-aiohttp
-aioitertools
-aiosignal
-alabaster
-altair
-anaconda-anon-usage
-anaconda-catalogs
-anaconda-client
-anaconda-cloud-auth
-anaconda-navigator
-anaconda-project
-annotated-types
-anyio
-applaunchservices
-appnope
-appscript
-archspec
-argon2-cffi
-argon2-cffi-bindings
-arrow
-astroid
-astropy
-astropy-iers-data
-asttokens
-async-lru
-attrs
-Automat
-autopep8
-Babel
-bcrypt
-beautifulsoup4
-binaryornot
-black
-bleach
-blinker
-bokeh
-boltons
-botocore
-Bottleneck
-Brotli
-cachetools
-certifi
-cffi
-chardet
-charset-normalizer
-click
-cloudpickle
-colorama
-colorcet
-comm
-conda
-conda-build
-conda-content-trust
-conda-libmamba-solver
-conda-pack
-conda-package-handling
-conda-repo-cli
-conda-token
-constantly
-contourpy
-cookiecutter
-cryptography
-cssselect
-cycler
-cytoolz
-dask
-dask-expr
-datashader
-debugpy
-decorator
-defusedxml
-diff-match-patch
-dill
-distributed
-distro
-dmglib
-docstring-to-markdown
-docutils
-et-xmlfile
-exceptiongroup
-executing
-fastjsonschema
-filelock
-flake8
 Flask
-fonttools
-frozendict
-frozenlist
-fsspec
-gensim
-gitdb
-GitPython
-greenlet
-h11
-h5py
-HeapDict
-holoviews
-httpcore
-httpx
-hvplot
-hyperlink
-idna
-imagecodecs
-imageio
-imagesize
-imbalanced-learn
-importlib-metadata
-incremental
-inflection
-iniconfig
-intake
-intervaltree
-ipykernel
-ipython
-ipython-genutils
-ipywidgets
-isort
-itemadapter
-itemloaders
-itsdangerous
-jaraco.classes
-jedi
-jellyfish
-Jinja2
-jmespath
-joblib
-json5
-jsonpatch
-jsonschema
-jsonschema-specifications
-jupyter
-jupyter-console
-jupyter-events
-jupyter-lsp
-jupyterlab
-jupyterlab-pygments
-jupyterlab-widgets
-keyring
-kiwisolver
-lazy-object-proxy
-libarchive-c
-libmambapy
-linkify-it-py
-llvmlite
-lmdb
-locket
-lxml
-lz4
-Markdown
-markdown-it-py
-MarkupSafe
-matplotlib-inline
-mccabe
-mdit-py-plugins
-mdurl
-menuinst
-mistune
-more-itertools
-mpmath
-msgpack
-multidict
-multipledispatch
-mypy
-mypy-extensions
-navigator-updater
-nbclient
-nbconvert
-nbformat
-networkx
-nltk
-notebook
-numba
-numexpr
-numpy
-numpydoc
-openpyxl
-overrides
-packaging
-pandas
-pandocfilters
-panel
-param
-parsel
-parso
-partd
-pathspec
-patsy
-pexpect
-pickleshare
-pillow
-pkce
-pkginfo
-platformdirs
-plotly
-pluggy
-ply
-prometheus-client
-Protego
-psutil
-ptyprocess
-py-cpuinfo
-pyarrow
-pyasn1
-pycodestyle
-pycosat
-pycparser
-pyct
-pycurl
-pydantic
-pydeck
-PyDispatcher
-pydocstyle
-pyerfa
-pyflakes
-Pygments
-PyJWT
-pylint
-pylint-venv
-pyobjc-core
-pyobjc-framework-Cocoa
-pyobjc-framework-CoreServices
-pyobjc-framework-FSEvents
-pyodbc
-pyOpenSSL
-pyparsing
-PyQt5-sip
-PySocks
-pytest
-python-dateutil
-python-dotenv
-python-json-logger
-python-lsp-black
-python-lsp-jsonrpc
-python-lsp-server
-python-slugify
-pytoolconfig
-pytz
-PyWavelets
-PyYAML
-pyzmq
-QDarkStyle
-qstylizer
-QtAwesome
-qtconsole
-QtPy
-queuelib
-referencing
-regex
+gunicorn
+flask
 requests
-requests-file
-requests-toolbelt
-rfc3339-validator
-rfc3986-validator
-rich
-rope
-rpds-py
-Rtree
-ruamel-yaml-conda
-ruamel.yaml
-ruamel.yaml.clib
-s3fs
-scikit-image
-scikit-learn
-scipy
-Scrapy
-seaborn
-semver
-Send2Trash
-service-identity
-sip
-six
-smart-open
-smmap
-sniffio
-snowballstemmer
-sortedcontainers
-soupsieve
-Sphinx
-sphinxcontrib-applehelp
-sphinxcontrib-devhelp
-sphinxcontrib-htmlhelp
-sphinxcontrib-jsmath
-sphinxcontrib-qthelp
-sphinxcontrib-serializinghtml
-spyder
-spyder-kernels
-SQLAlchemy
-statsmodels
-streamlit
-sympy
-tables
-tabulate
-tblib
-tenacity
-terminado
-text-unidecode
-textdistance
-threadpoolctl
-three-merge
-tifffile
-tinycss2
-tldextract
-toml
-tomli
-tomlkit
-toolz
-tornado
-tqdm
-traitlets
-truststore
-Twisted
-tzdata
-uc-micro-py
-ujson
-unicodedata2
-Unidecode
-urllib3
-w3lib
-watchdog
-wcwidth
-webencodings
-websocket-client
-Werkzeug
-whatthepatch
-widgetsnbextension
-wrapt
-wurlitzer
-xarray
-xlwings
-xyzservices
-yapf
-yarl
-zict
-zipp
-zope.interface
-zstandard
+psycopg2-binary
